# HOLLOW-flatpak

./: .gitignore  .gitmodules  .mcp.json  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HAVEN_PLAN.md  HOLLOW_PLAN.md  MobilePort_Plan.md  PERFORMANCE_REPORT.md  QA_REPORT.md  README.md  SECURITY.md  WHITEPAPER.md  backend_report.md  codecov.yml  com.anonlisten.hollow.yml  flutter_rust_bridge.yaml  pubspec.yaml  thread_draft.txt
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-ffmpeg.yml  flatpak-build.yml  flatpak-ci.yml  flatpak.yml  rust-coverage.yml  test-dispatch.yml
android/app/: build.gradle.kts
assets/: rust_licenses.txt
flatpak/: AGENTS.md  README.md  build-flatpak.sh  com.anonlisten.Hollow.desktop  com.anonlisten.Hollow.metainfo.xml  com.anonlisten.Hollow.yml  com.anonlisten.hollow.yml  flatpak-flutter.yml  foreign.json
flatpak/patches/cargokit/: run_build_tool.sh.patch
flatpak/scripts/: copy-flutter-libs.sh  rustup-wrapper.sh
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
ios/Runner/Base.lproj/: LaunchScreen.storyboard
legal/: legality.md  manifest.json  news.json  transparency_report.md
lib/: main.dart
lib/src/core/: android_platform.dart  brand_icons.dart  color_utils.dart  rust_licenses.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/theme/: haven_colors.dart  haven_spacing.dart  haven_theme.dart  haven_theme_data.dart  haven_typography.dart  hollow_colors.dart  hollow_spacing.dart  hollow_theme.dart  hollow_theme_data.dart  hollow_typography.dart
lib/src/ui/: app.dart  shader_warmup.dart
linux/: CMakeLists.txt  com.anonlisten.hollow.desktop  com.anonlisten.hollow.metainfo.xml
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
linux/runner/: main.cc  my_application.cc
loadtest/: Cargo.toml  wire_bench.py
loadtest/src/: churn.rs
loadtest_results/: capacity.py  capacity_ui.py
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: Info.plist  Release.entitlements
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig  Debug.xcconfig  Release.xcconfig
relay/: Cargo.toml
relay-uws/: .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  turnserver.conf.example
relay-uws/bench/room_bench/: Cargo.toml
relay-uws/bench/room_bench/src/: main.rs
relay-uws/deploy/: hollow-relay.service
relay-uws/src/: main.cpp  state.h  ws_handler.cpp
relay/src/: config.rs  main.rs  relay_node.rs  signaling_http.rs  ws_router.rs
reports/: FEATURE_MATRIX.md  NATIVE_SCREEN_SHARE.md
rust/haven_core/: Cargo.toml
rust/haven_core/src/: frb_generated.rs  lib.rs
rust/haven_core/src/api/: crdt.rs  identity.rs  mod.rs  network.rs  storage.rs
rust/haven_core/src/crdt/: admin_lww.rs  operations.rs  server_state.rs
rust/haven_core/src/crypto/: mls_manager.rs  mod.rs  olm_manager.rs  store.rs
rust/haven_core/src/identity/: keys.rs
rust/haven_core/src/node/: file_transfer.rs  mod.rs  signaling.rs  swarm.rs  tunnel.rs
rust/haven_core/src/storage/: messages.rs  mod.rs
rust/haven_core/src/vault/: adaptive.rs  content_store.rs  mod.rs  pipeline.rs
rust/hollow_core/: Cargo.toml  about.hbs  about.toml
rust/hollow_core/.cargo/: config.toml
rust/hollow_core/src/: frb_generated.rs  lib.rs
rust/hollow_core/src/api/: archive.rs  crdt.rs  identity.rs  mod.rs  network.rs  share.rs  simple.rs  storage.rs  twitch.rs  updater.rs
rust/hollow_core/src/archive/: exporter.rs  loader.rs  mod.rs  types.rs
rust/hollow_core/src/crdt/: hlc.rs  mod.rs  operations.rs  server_state.rs  store.rs  sync.rs
rust/hollow_core/src/crypto/: mls_manager.rs  mod.rs  olm_manager.rs  store.rs
rust/hollow_core/src/identity/: encryption.rs  keys.rs  mod.rs  native_identity.rs  platform_keystore.rs
rust/hollow_core/src/node/: crdt_store.rs  crypto_handler.rs  file_handler.rs  file_transfer.rs  gossip.rs  gossip_relay.rs  image_convert.rs  link_preview.rs  message_ops.rs  mod.rs  recovery_pool.rs  share_handler.rs  signaling.rs  social.rs  stream_transfer.rs  swarm.rs  sync_handler.rs  tunnel.rs  twitch.rs  types.rs  vault_ops.rs  voice_handler.rs  ws_client.rs  ws_stream_transfer.rs
rust/hollow_core/src/storage/: messages.rs  mod.rs
rust/hollow_core/src/vault/: content_store.rs  erasure.rs  mod.rs  pipeline.rs  placement.rs  rebalancer.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/cargokit/: run_build_tool.sh
rust_builder/ios/: hollow_core.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: hollow_core.podspec
rust_builder/windows/: CMakeLists.txt
scripts/: build_screen_audio.ps1  build_screen_audio.sh  fetch_ffmpeg.ps1  fetch_ffmpeg.sh
test/: widget_test.dart
test/helpers/: mock_rust_lib.dart  test_app.dart  test_data.dart
test/widget/: desktop_shell_test.dart  mobile_nav_badge_test.dart  mobile_shell_test.dart
tools/hollow-memory/: chunker.py  config.py  embedder.py  requirements.txt  server.py  store.py
tools/hollow-memory/wiki/: couplings_gotchas.md  providers_chat.md  providers_event_settings.md  providers_social_identity.md  providers_voice_files.md  relay_uws_server.md  rust_crdt.md  rust_crypto.md  rust_ffi_crdt_storage.md  rust_ffi_share_identity.md  rust_file_handler.md  rust_message_ops.md  rust_networking.md  rust_social.md  rust_storage_db.md  rust_swarm_event_loop.md  rust_sync_handler.md  rust_types.md  rust_vault.md  rust_voice_handler.md  services_media_storage.md  services_recording_annotation.md  ui_chat_channel.md  (+10 more)
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: CMakeLists.txt  Runner.rc  flutter_window.cpp  main.cpp  win32_window.cpp
(+227 files in other folders)
