[package]
name = "hollow-loadtest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hollow-loadtest"
path = "src/main.rs"

[[bin]]
name = "hollow-churntest"
path = "src/churn.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal", "sync", "net"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.23", features = ["ring"] }
futures-util = "0.3"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
hex = "0.4"
bs58 = "0.5"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
url = "2"

[profile.release]
opt-level = 3
lto = "thin"
