[package]
name = "hollow-relay"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hollow-relay"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time", "signal", "fs"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
ed25519-dalek = { version = "2", features = ["pkcs8"] }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
hex = "0.4"
futures-util = "0.3"
hmac = "0.12"
sha1 = "0.10"
