[package]
name = "haven_core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
libp2p = { version = "0.56.0", features = ["tcp", "noise", "yamux", "mdns", "tokio", "macros", "identify", "request-response"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time"] }
rusqlite = { version = "0.34", features = ["bundled-sqlcipher"] }
hex = "0.4"
bip39 = "2.2"
dirs = "6"
getrandom = "0.3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
