[package]
name = "hollow_core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
libp2p = { version = "0.56.0", features = ["tcp", "noise", "yamux", "mdns", "tokio", "macros", "identify", "request-response", "quic", "kad", "autonat", "dcutr", "relay", "ping", "dns", "websocket", "tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time"] }
rusqlite = { version = "0.34", features = ["bundled-sqlcipher"] }
hex = "0.4"
sha2 = "0.10"
bip39 = "2.2"
dirs = "6"
getrandom = "0.3"
vodozemac = "0.9"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
crdts = "7.3"
openmls = "0.8"
openmls_rust_crypto = "0.5"
openmls_basic_credential = "0.5"
openmls_traits = "0.5"
openmls_memory_storage = "0.5"
shadowsocks-service = { version = "1.21", default-features = false, features = ["local-tunnel", "aead-cipher-2022"] }
image = { version = "0.25", default-features = false, features = ["webp", "png", "jpeg", "gif", "bmp"] }
reed-solomon-erasure = "6.0"
aes-gcm = "0.10"

[dev-dependencies]
tempfile = "3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
