[package]
name = "relay_room_bench"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
base64 = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
rustls = "0.22"
webpki-roots = "0.26"

[profile.release]
opt-level = 3
lto = true
